# rustmonkey-api

./: .gitignore  Makefile  README.md  get-account.sh  local-vars.json  template.yaml
db/: account-dao-test-setup.sh  create-table.sh  docker-compose.yml
lambda/: Cargo.toml  Makefile
lambda/.cargo/: config.toml
lambda/src/: error.rs  main.rs  request_handler.rs  request_router.rs
lambda/src/account/: account-dao-test-setup.sh  dao.rs  mod.rs  service.rs
lambda/src/dynamodb/: mod.rs
lambda/src/web/: mod.rs  request_handler.rs  request_router.rs
localstack/: debugging-compose.yml  deployment-compose.yml
localstack/debugging-lambda/: Dockerfile
localstack/start-up-scripts/: ready.sh
make-scripts/: debug-on-localstack.sh  deploy-to-localstack.sh  run-tests-on-localstack.sh
test-scripts/: README.md  all-tests.sh  common.sh-source  create-account.sh  credit-account.sh  debit-account.sh  test-create-account.sh  test-credit-account.sh  test-debit-account.sh  test-query-account.sh
