[package]
name = "rustmonkey-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lambda_runtime = "^0.4.1"
lambda_http = "^0.4.1"
serde = { version = "^1.0.130", features = ["derive"] }
#serde_json = { version = "1.0.68", features = ["arbitrary_precision"] }
serde_json = "^1.0.68"
bigdecimal = { version = "^0.3.0", features = ["serde"] }
tokio = { version = "^1.13.0", features = ["full"] }
futures = "^0.3.17"
http = "^0.2.5"
log = "^0.4.14"
simple_logger = "^1.13.0"
aws-config = "^0.0.25-alpha"
aws-sdk-dynamodb = "^0.0.25-alpha"

[[bin]]
name = "bootstrap"
path = "src/main.rs"

